Need to fix log out and attempt delete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.PumpItUp"
         tools:targetApi="31">
         <activity
-            android:name=".activities.PumpListActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.PumpListActivity">
+        </activity>
+
 
         <activity android:name=".activities.MainActivity">
             <meta-data
