--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:name=".main.MainApp"
@@ -12,12 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PumpItUp"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
             android:name=".NavActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_nav"
-            android:theme="@style/Theme.PumpItUp.NoActionBar" />
+            android:theme="@style/Theme.PumpItUp.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -34,7 +40,7 @@
         <activity
             android:name=".activities.PumpListActivity"
             android:exported="true"
-            android:label="@string/title_pump_activity_list">
+            android:label="@string/title_pump_activity_list" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
