Search Icon is broken i need to fix that. SignUpPage done needs more fields to it. Users can sign in and out and sign up successfully and added to Firebase Authentication however they dont have their oen individual accounts , they all have the same markers so need to fix that also. PumpMapActivity works with markers there , update works on them and the cardview has station heading , image dies, petrol price and eircode when marker is clicked. Driving 101 page also added for people who need to brush up on their driving.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -39,7 +40,8 @@ android {
 
 dependencies {
 
-        constraints {
+        implementation 'com.google.firebase:firebase-auth-ktx:22.0.0'
+    constraints {
             implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
                 because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
             }
@@ -48,8 +50,7 @@ dependencies {
             }
         }
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.android.material:material:1.9.0-beta01'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.core:core-ktx:1.9.0'
@@ -63,6 +64,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
     //implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
