--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name=".main.MainApp"
@@ -12,17 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PumpItUp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".NavActivity"
-            android:exported="true"
-            android:label="@string/title_activity_nav"
-            android:theme="@style/Theme.PumpItUp.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:name=".activities.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.Driving101Activity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.PumpMapActivity"
+            android:exported="false"
+            android:label="@string/title_activity_pump_map"
+            android:theme="@style/Theme.PumpItUp.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
 
         <meta-data
@@ -40,7 +44,8 @@
         <activity
             android:name=".activities.PumpListActivity"
             android:exported="true"
-            android:label="@string/title_pump_activity_list" >
+            android:label="@string/title_pump_activity_list">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,16 +53,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DrawerBaseActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.DashboardActivity"
-            android:exported="true"
-            android:label="@string/title_activity_dashboard"
-            android:theme="@style/Theme.PumpItUp.NoActionBar" />
-        <activity
             android:name=".activities.LoginActivity"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
 
         <meta-data
             android:name="android.app.lib_name"
